styles/globals.css
@import './defaultClasses.css';

html {
  scroll-behavior: smooth;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .animation-delay-2000 {
    animation-delay: 2s;
  }
  .animation-delay-3000 {
    animation-delay: 3s;
  }
  .animation-delay-4000 {
    animation-delay: 4s;
  }
}

@layer base {
  :root {
    --color-primary: #2c3e50;
    --color-secondary: #808b96;
    --color-dark-primary: #1e2023;
    --color-dark-secondary: #18191c;
  }
}

@layer components {
  body::-webkit-scrollbar-thumb {
    @apply bg-primary rounded-3xl outline-0 dark:bg-white;
  }
  body::-webkit-scrollbar {
    @apply w-[4px];
  }
  input::placeholder {
    @apply text-gray-600 dark:text-white;
  }
  body ul {
    @apply list-none;
  }
}

.chicken {
  animation: walk 1.2s steps(8) infinite, forward 70s linear infinite;
}

@keyframes walk {
  0% {
    background-position: 0px;
  }
  100% {
    background-position: -100%;
  }
}
@keyframes forward {
  0% {
    transform: translateX(-100px);
  }
  100% {
    transform: translateX(100vw);
  }
}

.ripple {
  animation: ripple;
}

@keyframes ripple {
    to {
      opacity: 0;
      transform: scale(2);
    }
  }

